# mkdocs-basic-theme

./: .gitignore  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
about/contributing/: index.html
about/license/: index.html
about/release-notes/version-1/: index.html
about/release-notes/version-2/: index.html
basic_theme/: base.html  nav.html  search.html
basic_theme/css/: theme.css
css/: theme.css
docs/: index.md  page.md
docs/about/: contributing.md  license.md
docs/about/release-notes/: version-1.md  version-2.md
docs/user-guide/: configuration.md  custom-themes.md  deploying-your-docs.md  styling-your-docs.md  writing-your-docs.md
js/: theme.js
mkdocs/: search_index.json
page/: index.html
search/: main.js  search_index.json  worker.js
sub/page/: index.html
user-guide/configuration/: index.html
user-guide/custom-themes/: index.html
user-guide/deploying-your-docs/: index.html
user-guide/styling-your-docs/: index.html
user-guide/writing-your-docs/: index.html
